--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   lottie: ^1.2.1
+  firebase_core: ^1.10.0
+  firebase_auth: ^3.2.0
 
 dev_dependencies:
   flutter_test:
