--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^1.2.1
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
